# nosepass

./: app.py  cnn_evaluator.py  emnist_cnn_model.h5  multiplayer.html  pyproject.toml  questions.json  recognizer.py  replit.md  requirements.txt
.render/: build.sh
NoseDrawDuel/: app.py  image_recognizer.py  models.py  pyproject.toml  replit.md
NoseDrawDuel/attached_assets/: Pasted--NoseTracker-Handles-nose-tracking-using-MediaPipe-FaceMesh-class-NoseTracker--1752985344620_1752985344625.txt  Pasted--Purpose-Implement-a-2-player-mode-for-an-existing-single-player-Nose-Drawing-Game-web-app-usi-1752984299075_1752984299076.txt  Pasted-import-os-import-logging-import-numpy-as-np-from-PIL-import-Image-import-cv2-from-skimage-metri-1752986328136_1752986328138.txt
NoseDrawDuel/instance/: nose_game.db
NoseDrawDuel/multiplayer/: __init__.py  routes.py
NoseDrawDuel/multiplayer/static/: multiplayer.css  multiplayer.js  nose_tracker.js
NoseDrawDuel/multiplayer/templates/: multiplayer.html
NoseDrawDuel/multiplayer/utils/: score_evaluator.py
NoseDrawDuel/templates/: index.html
static/css/: style.css
static/js/: app.js  tracker.js
templates/: home.html  index.html
